fix overflow

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -1,5 +1,7 @@
 @use 'helpers' as *;
-
+html{
+  overflow-x: hidden;
+}
 body{
   @include fluid-text(18, 14);
   overflow-x: hidden;
